# vep-mvp

./: .gitignore  AGENT_5_SUMMARY.md  AGENT_INSTRUCTIONS.md  CONTRIBUTING.md  FIX_SUMMARY.md  LICENSE  PROGRESS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RESTRUCTURE_README.md  TEST_EXECUTION_RESULTS.md  TEST_FIX_SUMMARY.md  setup-copilot.sh  setup.sh  spec.md
.copilot/: instructions-agent-1.md  instructions-agent-2.md  instructions-agent-3.md  instructions-agent-4.md  instructions-agent-5.md
.github/: PROJECT_QUICK_REFERENCE.md  PROJECT_SETUP.md  PROJECT_V2_MIGRATION.md  TESTING_CHECKLIST.md  WORKFLOWS.md  WORKFLOW_CLEANUP_SUMMARY.md  issue-templates.md  pull_request_template.md  test-project-automation.md
.github/ISSUE_TEMPLATE/: agent-task.md  bug-report.md
.github/copilot/: README.md  agent-1-database.md  agent-2-backend.md  agent-3-ios.md  agent-4-integration.md  agent-5-testing.md
.github/workflows/: backend-tests.yml  backend.yml  basic-permissions-test.yml  basic-test.yml  code-quality.yml  debug-gh-install.yml  deploy.yml  (+24 more)
backend/: .env.example  IMPLEMENTATION_SUMMARY.md  coverage.xml  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/models/: assignment.py  contact_log.py  user.py  voter.py
backend/app/routes/: assignments.py  auth.py  contact_logs.py  users.py  voters.py
backend/migrations/: 001_initial_schema.sql  README.md
backend/tests/: README.md  conftest.py  test_assignments.py  test_auth.py  test_contact_logs.py  test_integration.py  test_users.py  test_voters.py
docs/: GITHUB_CLI_PROJECT_AUTOMATION.md  GITHUB_PROJECT_SETUP.md  GITHUB_SETUP.md
scripts/: test-gh-automation.sh
(+34 files in other folders)
